# Booking

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  PROGRESS.md  README.md
.github/workflows/: claude.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.jobs
backend/crates/api/: Cargo.toml
backend/crates/api/src/: main.rs  response.rs
backend/crates/api/src/middleware/: auth.rs  mod.rs
backend/crates/api/src/routes/: admin.rs  auth.rs  bookings.rs  mod.rs  payments.rs  sessions.rs  subscriptions.rs  users.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: lib.rs
backend/crates/core/src/booking/: cancel.rs  create.rs  mod.rs  utils.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: conversions.rs  lib.rs  pool.rs
backend/crates/db/src/models/: booking.rs  mod.rs  session.rs  session_expense.rs  subscription.rs  ticket_transaction.rs  user.rs
backend/crates/db/src/queries/: admin.rs  bookings.rs  config.rs  mod.rs  session_expenses.rs  sessions.rs  subscriptions.rs  ticket_transactions.rs  users.rs
backend/crates/integrations/: Cargo.toml
backend/crates/integrations/src/: lib.rs
backend/crates/integrations/src/email/: mod.rs
backend/crates/integrations/src/google_vision/: mod.rs
backend/crates/integrations/src/stripe/: mod.rs  payments.rs  subscriptions.rs  webhooks.rs
backend/crates/integrations/src/supabase/: auth.rs  mod.rs  storage.rs
backend/crates/jobs/: Cargo.toml
backend/crates/jobs/src/: main.rs
backend/crates/jobs/src/jobs/: birthday_tickets.rs  mod.rs  release_unpaid.rs
backend/crates/types/: Cargo.toml
backend/crates/types/src/: enums.rs  errors.rs  lib.rs  period.rs  validation.rs
backend/crates/types/src/api/: admin.rs  auth.rs  bookings.rs  mod.rs  notifications.rs  sessions.rs  subscriptions.rs
backend/frontend/src/lib/types/: BonusTicketType.ts  DiscountType.ts  PaymentMethod.ts  PaymentStatus.ts  SubscriptionStatus.ts  UserRole.ts  VerificationStatus.ts
backend/migrations/: 20240101000000_initial_schema.sql  20241221000000_add_user_soft_delete.sql  20241223000000_add_session_expenses.sql  20241224000000_add_user_restrictions.sql  20241225000000_remove_moderator_role.sql  20251225121330_fix_booking_price_double_count.sql  20251228054413_add_duration_to_sessions.sql  20251229081214_add_subscriptions_table.sql  20251229101333_add_ticket_transactions.sql  20251229102031_add_birthday_to_users.sql
frontend/: .env.example  Dockerfile  components.json  package-lock.json  package.json  tailwind.config.ts
frontend/src/: app.css  hooks.server.ts
frontend/src/lib/: utils.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/auth/: supabase.ts
frontend/src/lib/components/: Footer.svelte  Navigation.svelte
frontend/src/lib/components/admin/: AdminLayout.svelte  StatCard.svelte  UserTicketPanel.svelte  index.ts
frontend/src/lib/components/admin/charts/: BookingStatusChart.svelte  ExpenseCategoryChart.svelte  MetricCard.svelte  ProfitTrendChart.svelte  SessionCapacityChart.svelte  index.ts
frontend/src/lib/components/icons/: ZaloIcon.svelte  index.ts
frontend/src/lib/components/layouts/: AppLayout.svelte  index.ts
frontend/src/lib/components/sessions/: SessionFilters.svelte  index.ts
frontend/src/lib/components/tickets/: TicketBadge.svelte
frontend/src/lib/components/ui/: Button.svelte  Card.svelte
frontend/src/lib/components/ui/alert/: alert.svelte
frontend/src/lib/components/ui/animated-container/: animated-container.svelte  index.ts
frontend/src/lib/components/ui/back-button/: back-button.svelte  index.ts
frontend/src/lib/components/ui/badge/: badge.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
frontend/src/lib/components/ui/checkbox/: checkbox.svelte
frontend/src/lib/components/ui/countdown/: countdown.svelte
frontend/src/lib/components/ui/datetime-picker/: datetime-picker.svelte
frontend/src/lib/components/ui/dropdown-menu/: dropdown-menu-item.svelte  dropdown-menu-sub-trigger.svelte
frontend/src/lib/components/ui/empty-state/: empty-state.svelte
frontend/src/lib/components/ui/error-state/: error-state.svelte  index.ts
frontend/src/lib/components/ui/footer-content/: footer-content.svelte  index.ts
frontend/src/lib/components/ui/glass-card/: glass-card.svelte  index.ts
frontend/src/lib/components/ui/gradient-text/: gradient-text.svelte  index.ts
frontend/src/lib/components/ui/input/: input.svelte
frontend/src/lib/composables/: index.ts  useAdminListPage.svelte.ts  useDialog.svelte.ts
frontend/src/lib/guards/: auth.ts
frontend/src/lib/i18n/: en.json  index.svelte.ts  vi.json
frontend/src/lib/stores/: auth.svelte.ts  theme.svelte.ts
frontend/src/lib/utils/: chart-utils.ts  sparkline.ts  status.ts
frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/account/: +page.svelte  +page.ts
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/admin/bookings/: +page.svelte
frontend/src/routes/admin/sessions/: +page.svelte
frontend/src/routes/admin/users/: +page.svelte
frontend/src/routes/auth/callback/: +page.svelte  +page.ts
frontend/src/routes/auth/login/: +page.svelte  +page.ts
frontend/src/routes/bookings/: +page.svelte
frontend/src/routes/bookings/[id]/: +page.svelte
frontend/src/routes/contact/: +page.svelte
frontend/src/routes/privacy/: +page.svelte
frontend/src/routes/sessions/: +page.svelte
frontend/src/routes/sessions/[id]/: +page.svelte
frontend/src/routes/subscriptions/: +page.svelte
frontend/src/routes/subscriptions/cancelled/: +page.svelte
frontend/src/routes/subscriptions/success/: +page.svelte
frontend/src/routes/suspended/: +page.svelte
frontend/src/routes/terms/: +page.svelte
frontend/src/routes/tickets/: +page.svelte
infra/docker/: docker-compose.dev.yml  docker-compose.yml
infra/docker/caddy/: Caddyfile
scripts/: generate-types.sh  setup-local.sh
(+38 files in other folders)
