[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core",
    "crates/db",
    "crates/jobs",
    "crates/types",
    "crates/integrations",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Loafy Club"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment variables
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Password hashing
argon2 = "0.5"

# JWT
jsonwebtoken = "9.3"

# Background jobs
tokio-cron-scheduler = "0.13"

# TypeScript generation
ts-rs = { version = "10.0", features = ["serde-json-impl", "chrono-impl", "uuid-impl"] }

# OpenAPI documentation
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# Decimal numbers
rust_decimal = "1.37"

# Axum extras for typed headers
axum-extra = { version = "0.9", features = ["typed-header"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
