[package]
name = "loafy-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
loafy-core = { path = "../core" }
loafy-db = { path = "../db" }
loafy-types = { path = "../types" }
loafy-integrations = { path = "../integrations" }

# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
rust_decimal = { workspace = true }
axum-extra = { workspace = true }

# Stripe (for PaymentIntentId type)
async-stripe = { version = "0.41", features = ["runtime-tokio-hyper"] }

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
