[package]
name = "loafy-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
loafy-types = { path = "../types" }

# Workspace dependencies
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
