[package]
name = "loafy-jobs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
loafy-core = { path = "../core" }
loafy-db = { path = "../db" }
loafy-types = { path = "../types" }
loafy-integrations = { path = "../integrations" }

# Workspace dependencies
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tokio-cron-scheduler = { workspace = true }
